# FileManager

./: .$Диаграмма.drawio.bkp  .$Диаграмма.drawio.dtmp  .gitignore  CMakeLists.txt  DActions.cpp  DActions.hpp  Descriptor.hpp  Dialog.cpp  Dialog.hpp  DirDescriptor.cpp  DirDescriptor.hpp  FileDescriptor.hpp  README.md  SystemDescriptor.cpp  SystemDescriptor.hpp  User.cpp  User.hpp  intermediary.cpp  intermediary.hpp  launch.cpp  launch.hpp  main.cpp  Диаграмма.drawio
Descriptors/: AccessTable.cpp  AccessTable.hpp  Descriptor.cpp  Descriptor.hpp  DirDescriptor.cpp  DirDescriptor.hpp  FileDescriptor.cpp  FileDescriptor.hpp
Dialog/: DActions.hpp  Dialog.cpp  Dialog.hpp
Launcher/: launch.cpp  launch.hpp
MyMap/: mymap.cpp  mymap.hpp
SystemSource/: SystemDescriptor.cpp  SystemDescriptor.hpp  User.cpp  User.hpp
_GTEST/: CMakeLists.txt  FileDesctiptor_test.cpp  test_access_table.cpp  test_descriptor.cpp  test_dirdescriptor.cpp  test_map.cpp  test_system_descriptor.cpp
